# apis-service/docs/swagger.yaml
@@ -19,6 +19,58 @@ definitions:
         description: e.g., string, int, boolean
         type: string
     type: object
+  models.HealthCheckEntity:
+    properties:
+      alertsEnabled:
+        description: NextCheckAt    time.Time // The timestamp of the next scheduled
+          health check
+        type: boolean
+      apiID:
+        description: Foreign key to the ApiEntity, unique to ensure one-to-one relation
+        type: integer
+      id:
+        type: integer
+      lastCheckedAt:
+        description: The timestamp of the last health check
+        type: string
+      lastStatus:
+        description: Last status of the health check
+        type: string
+      results:
+        description: |-
+          AlertEndpoints string    `gorm:"size:2048"` // JSON array of endpoints to send alerts to (email, SMS, webhook, etc.)
+          CreatedAt      time.Time `gorm:"default:CURRENT_TIMESTAMP"`
+          UpdatedAt      time.Time
+        items:
+          $ref: '#/definitions/models.HealthCheckResultEntity'
+        type: array
+      schedule:
+        description: Cron schedule string for when to run the check
+        type: string
+      url:
+        description: The URL to be checked
+        type: string
+    type: object
+  models.HealthCheckResultEntity:
+    properties:
+      checkedAt:
+        description: The timestamp of when the check was performed
+        type: string
+      healthCheckID:
+        description: Foreign key to the HealthCheckEntity
+        type: integer
+      id:
+        type: integer
+      responseTime:
+        description: Response time in milliseconds
+        type: integer
+      status:
+        description: Status of the check (success, failure)
+        type: string
+      statusMessage:
+        description: A message describing the status (error message, success, etc.)
+        type: string
+    type: object
   types.ApiDto:
     properties:
       categoryID:
@@ -80,6 +132,34 @@ definitions:
         type: boolean
       valueType:
         type: string
+    type: object
+  types.HealthCheckDto:
+    properties:
+      alertsEnabled:
+        description: Whether alerts are enabled for this health check
+        type: boolean
+      apiId:
+        description: The ID of the API for which the health check is being set up
+        type: integer
+      lastCheckedAt:
+        description: The timestamp of the last health check
+        type: string
+      lastStatus:
+        description: The last status of the health check
+        type: string
+      nextCheckAt:
+        description: The timestamp of the next scheduled health check
+        type: string
+      schedule:
+        description: Cron schedule string for when to run the check
+        type: string
+      url:
+        description: The URL to be checked
+        type: string
+    required:
+    - apiId
+    - schedule
+    - url
     type: object
   types.PlanDto:
     properties:
@@ -968,6 +1048,157 @@ paths:
       summary: Update an API Endpoints
       tags:
       - API Endpoints Operations
+  /health-checks:
+    post:
+      consumes:
+      - application/json
+      description: Creates a new Health Check for an API
+      parameters:
+      - description: Health Check Data
+        in: body
+        name: health-check
+        required: true
+        schema:
+          $ref: '#/definitions/types.HealthCheckDto'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/models.HealthCheckEntity'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Create a Health Check
+      tags:
+      - Health Checks
+  /health-checks/{api-id}:
+    get:
+      description: Retrieves a Health Check for a specific API
+      parameters:
+      - description: API ID
+        in: path
+        name: api-id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.HealthCheckEntity'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get Health Check by API ID
+      tags:
+      - Health Checks
+  /health-checks/{api-id}/success-percentage:
+    get:
+      description: Get the success percentage of health checks for a specific API
+      parameters:
+      - description: API ID
+        in: path
+        name: api-id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: number
+            type: object
+        "400":
+          description: Invalid API ID
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Get Health Check Success Percentage
+      tags:
+      - Health Checks
+  /health-checks/{id}:
+    delete:
+      description: Deletes a specific Health Check for an API
+      parameters:
+      - description: Health Check ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "404":
+          description: Not Found
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Delete a Health Check
+      tags:
+      - Health Checks
+    patch:
+      consumes:
+      - application/json
+      description: Updates an existing Health Check for an API
+      parameters:
+      - description: Health Check ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Health Check Data
+        in: body
+        name: health-check
+        required: true
+        schema:
+          $ref: '#/definitions/types.HealthCheckDto'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.HealthCheckEntity'
+        "400":
+          description: Bad Request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: Update a Health Check
+      tags:
+      - Health Checks
   /plan:
     post:
       consumes:
